--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)  
 set(Boost_USE_STATIC_RUNTIME OFF) 
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -DBOOST_LOG_DYN_LINK")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -DBOOST_ALL_DYN_LINK")
 
 set(JSON_BuildTests OFF CACHE BOOL "turn off bulding nlohman::json unit tests" FORCE)
 
