Complete docker-compose

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,16 @@ project(chronicle-cpp-consumer VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(Boost_USE_STATIC_LIBS OFF) 
+set(Boost_USE_STATIC_LIBS ON) 
+set(BOOST_LOG_DYN_LINK ON)  # link dynamically boost::log
 set(Boost_USE_MULTITHREADED ON)  
 set(Boost_USE_STATIC_RUNTIME OFF) 
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -DBOOST_ALL_DYN_LINK")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 
 set(JSON_BuildTests OFF CACHE BOOL "turn off bulding nlohman::json unit tests" FORCE)
 
-find_package(Boost 1.70 COMPONENTS log REQUIRED)
+find_package(Boost 1.70 COMPONENTS log log_setup REQUIRED)
 find_package(libmongocxx REQUIRED)
 find_package(libbsoncxx REQUIRED)
 
@@ -40,7 +41,7 @@ ${Boost_INCLUDE_DIRS} )
 target_link_libraries(
 chronicle-consumer 
 PRIVATE nlohmann_json::nlohmann_json
-PUBLIC ${Boost_LIBRARIES} ${LIBMONGOCXX_LIBRARIES} ${LIBBSONCXX_LIBRARIES} 
+PUBLIC ${Boost_LIBRARIES} ${LIBMONGOCXX_LIBRARIES} ${LIBBSONCXX_LIBRARIES} Boost::log_setup Boost::log
 pthread)
 
 
