--- a/examples/chronicle/config.ini
+++ b/examples/chronicle/config.ini
@@ -1,7 +1,7 @@
 # connection to nodeos state_history_plugin
-host = 
+host = ex1.eosdac.io
 port = 8080
-mode = scan-noexport
+mode = scan
 skip-table-deltas = false
 plugin = exp_ws_plugin
 exp-ws-host = chronicle-cpp-consumer
